--- a/src/app/pages/employee/employee.html
+++ b/src/app/pages/employee/employee.html
@@ -21,6 +21,24 @@
                     <p class="mobile">
                         <i class="fa fa-phone"></i> {{empBaicDetail.PdMobileNo}}</p>
                     </p>
+                    <div class="dropdown">
+                        <button class="btn btn-primary dropdown-toggle" type="button" data-toggle="dropdown">
+                            Prefrences
+                            <span class="caret"></span>
+                        </button>
+                        <ul class="dropdown-menu">
+                            <li>
+                                <a>Role</a>
+                            </li>
+                            <li>
+                                <a>Password</a>
+                            </li>
+                            <li>
+                                <a>Login Disabled</a>
+                            </li>
+                        </ul>
+                    </div>
+
                 </div>
                 <div class="col-sm-12 clear-left-padding">
                     <div class="col-sm-12 clear-left-padding">
