--- a/src/app/common/components/gridView/gridView.html
+++ b/src/app/common/components/gridView/gridView.html
@@ -1,20 +1,20 @@
 <div class="grid-view">
     <div class="row">
         <div class="col-md-6">
-            <button class="btn btn-default" ng-click="addRecord()">
+            <button class="btn btn-default" ng-click="addRecord({})">
                 <i class="fa fa-plus"></i>
                 <span dotranslate>create</span>
             </button>
         </div>
         <div class="col-md-6">
             <ul class="view-type-menu pull-right">
-                <li uib-tooltip="Grid View" tooltip-placement="top">
+                <li uib-tooltip="Grid" tooltip-placement="top">
                     <a href ng-click="showGrid=true">
                         <i class="fa fa-th font-gray" ng-class="{'font-blue':showGrid}"></i>
                     </a>
                 </li>
                 <li>
-                    <a href ng-click="showGrid=false" uib-tooltip="Gallary View" tooltip-placement="top">
+                    <a href ng-click="showGrid=false" uib-tooltip="Circle" tooltip-placement="top">
                         <i class="fa fa-th-large font-gray" ng-class="{'font-blue':!showGrid}"></i>
                     </a>
                 </li>
