--- a/src/app/pages/configuration/company/locations/location/edit-location.html
+++ b/src/app/pages/configuration/company/locations/location/edit-location.html
@@ -22,15 +22,7 @@
                     <div class="col-sm-8">
                         <div class="form-group">
                             <label dotranslate>Country</label>
-                            <ui-select ng-model="entity.CountryId" name="CountryId" id="CountryId" theme="bootstrap" ng-disabled="disabled" class="client-select"
-                                ng-change="changeState()" required>
-                                <ui-select-match placeholder="Select a Country">{{$select.selected.name}}</ui-select-match>
-                                <ui-select-choices class="action-button" repeat="country in selects.CountryId | filter: {name : $select.search}" ng-nicescroll="">
-                                    <span ng-bind-html="country.name | highlight: $select.search"></span>
-                                </ui-select-choices>
-                            </ui-select>
-                            <span class="validation-msg" validation-messages="" model-controller="bankDetails.accountNumber" required-error="Account number is required"
-                                form-submit="bankDetails.$submitted"></span>
+                            <select class="form-control" name="CountryId" ng-options="opt.value as opt.name for opt in selects.CountryId" ng-change="changeState()" ng-model="entity.CountryId"></select>
                         </div>
                     </div>
                 </div>
@@ -38,15 +30,15 @@
                     <div class="col-sm-8">
                         <div class="form-group">
                             <label dotranslate>State</label>
-                            <ui-select ng-model="entity.StateId" name="StateId" id="StateId" theme="bootstrap" ng-disabled="disabled" class="client-select"
-                                 required>
-                                <ui-select-match placeholder="Select a State">{{$select.selected.name}}</ui-select-match>
-                                <ui-select-choices class="action-button" repeat="state in selects.StateList | filter: {name : $select.search}" ng-nicescroll="">
-                                    <span ng-bind-html="state.name | highlight: $select.search"></span>
-                                </ui-select-choices>
-                            </ui-select>
-                            <span class="validation-msg" validation-messages="" model-controller="bankDetails.accountNumber" required-error="Account number is required"
-                                form-submit="bankDetails.$submitted"></span>
+                            <select class="form-control" name="state" ng-options="opt.value as opt.name for opt in selects.StateList" ng-model="entity.StateId"></select>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-sm-12 clear-left-padding">
+                    <div class="col-sm-8">
+                        <div class="form-group">
+                            <label dotranslate>City</label>
+                            <select class="form-control" name="state" ng-options="opt.value as opt.name for opt in selects.CityId" ng-model="entity.CityId"></select>
                         </div>
                     </div>
                 </div>
@@ -55,8 +47,8 @@
             <div class="row">
                 <div class="col-sm-12 vertical-margin">
                     <div class="col-sm-6 pull-right text-right">
-                        <button type="submit" ng-if="!isEdit" class="btn btn-success" ng-click="addLocationDetail();" dotranslate>Add Location</button>
-                        <button type="submit" ng-if="isEdit" class="btn btn-success" ng-click="updateLocationDetail();" dotranslate>Update Location</button>
+                        <button type="submit" ng-if="!isEdit" class="btn btn-success" ng-click="saveForm(locationDetail);" dotranslate>Add Location</button>
+                        <button type="submit" ng-if="isEdit" class="btn btn-success" ng-click="saveForm(locationDetail);" dotranslate>Update Location</button>
                         <a class="btn btn-cancel" ng-click="$dismiss();">Cancel</a>
                     </div>
                 </div>
