--- a/src/app/pages/selfdashboard/dashboard.html
+++ b/src/app/pages/selfdashboard/dashboard.html
@@ -29,7 +29,7 @@
     <div class="col-md-6">
         <div class="panel panel-medium">
             <div class="panel-heading">
-                Attendace Summery
+                Attendace Summary
             </div>
 
             <div class="panel-body">
