--- a/src/app/pages/selfdashboard/trafficChart/trafficChart.html
+++ b/src/app/pages/selfdashboard/trafficChart/trafficChart.html
@@ -3,7 +3,7 @@
   <div class="panel-heading">
     <div class="row">
       <div class="col-md-8">
-        Attendace Summery
+        Attendance Summary
 
       </div>
       <!-- <div class="col-md-2"></div> -->
