--- a/src/app/pages/self/apply/apply.html
+++ b/src/app/pages/self/apply/apply.html
@@ -1,3 +1,2 @@
-<div ng-controller="attendanceController">
-    <top-nav menu="'selfdir.apply'"></top-nav>
-</div>
+<child-nav menu="'selfdir.apply'">
+</child-nav>
