--- a/src/app/pages/self/apply/applyattendance/applyattendance.html
+++ b/src/app/pages/self/apply/applyattendance/applyattendance.html
@@ -1,5 +1,7 @@
-<grid-box ng-model="page" ng-show="showGrid">
-</grid-box>
+<div class="panel-body">
+    <grid-box ng-model="page" ng-show="showGrid">
+    </grid-box>
+</div>
 
 <form name="editForm " novalidate ng-submit="saveForm() " ng-show="showEditForm ">
     <div class="panel panel-default xmedium-panel ">
