--- a/src/app/pages/self/attendance/attendance.html
+++ b/src/app/pages/self/attendance/attendance.html
@@ -1,3 +1,2 @@
-<div ng-controller="attendanceController">
-    <top-nav menu="'selfdir.attendance'"></top-nav> 
-</div>
+
+    <child-nav menu="'selfdir.attendance'"></child-nav> 
