--- a/src/app/pages/employee/emprole/role.html
+++ b/src/app/pages/employee/emprole/role.html
@@ -5,7 +5,7 @@
 
     <div class="modal-body content-container">
         <div class="row add-signatory-container">
-            <form  ng-submit="register(entity)">
+            <form  ng-submit="change(entity)">
                 <div class="col-sm-12 vertical-margin">
                     <fieldset>
                         <div class="col-sm-12 new-person-details">
