--- a/src/app/pages/self/statement/statement.html
+++ b/src/app/pages/self/statement/statement.html
@@ -1,4 +1,4 @@
-<div class="row" id="bottom">
+<!-- <div class="row" id="bottom">
     <div class="col-md-12">
         <div class="panel panel-medium">
             <div class="panel-heading">
@@ -12,7 +12,6 @@
 
 
             <div class="panel-body panel-medium">
-                <!-- <grid-view ng-model="page"></grid-view> -->
                 <div class="row">
                     <div class="col-md-12">
                         <grid-view ng-model="page" show-grid="true" allow-gallary="false" title-column="LocationName" tag-column="CityName" desc-column="StateName"></grid-view>
@@ -21,4 +20,7 @@
             </div>
         </div>
     </div>
-</div>
+</div> -->
+
+<child-nav menu="'selfdir.statement'">
+</child-nav>
