--- a/src/sass/theme/_empMain.scss
+++ b/src/sass/theme/_empMain.scss
@@ -26,7 +26,7 @@
 }
 .profile-picture-container {
   position: absolute;
-  width: 110px;
+  width: 214px;
   height: 214px;
   float: left;
   background-color: #fff!important;
@@ -39,7 +39,7 @@
 .employee-profile-container .profile-picture-container .img-initials {
   height: 214px;
   width: 260px;
-  font-size: 125px;
+  font-size: 104px;
   padding: 55px 30px;
   border-radius: 4px;
   border-bottom-right-radius: 0;
@@ -50,6 +50,9 @@
   color:white;
 }
 
+.profile-picture > input{
+  display :none;
+}
 //   #page-wrapper .page-container .sub-page-container {
 //     margin-top: 20px;
 // }
