--- a/src/app/pages/directory/empdashboard/empdashboard.html
+++ b/src/app/pages/directory/empdashboard/empdashboard.html
@@ -90,7 +90,7 @@
                         </div>
                         <div class="col-sm-12 link-item clear-side-padding">
                             <div class="col-sm-6">
-                                <a class="anchor-sm" data-ui-sref="importemployees" href="#/employees/import">
+                                <a class="anchor-sm" data-ui-sref="organization.employees.upload" >
                                     <span>
                                         <i class="fa fa-user-plus"></i>
                                     </span>
