--- a/src/app/pages/employee/empjob/empjob.html
+++ b/src/app/pages/employee/empjob/empjob.html
@@ -17,7 +17,7 @@
                                                     <span clas="font-red">*</span>
                                                 </label>
                                                 <a href class="pull-right ">CHANGE</a>
-                                                <input type="text" class="form-control" data-ng-model="entity.JDOfficeEmail" required/>
+                                                <input type="text" class="form-control" data-ng-model="entity.LocationName" required/>
 
                                             </div>
                                         </div>
@@ -58,7 +58,7 @@
                                         <div class="col-sm-4 col-lg-offset-2  clear-left-padding">
                                             <div class="form-group">
                                                 <label>Date Of Joining </label>
-                                                <input type="text" class="form-control" data-ng-model="entity.JDOfficeMobile" required />
+                                                <input type="text" class="form-control" data-ng-model="entity.JDDate" required />
 
                                             </div>
                                         </div>
