--- a/src/app/pages/employee/empprofile/contact/contact.html
+++ b/src/app/pages/employee/empprofile/contact/contact.html
@@ -52,7 +52,7 @@
                             </div>
                             <div class="col-sm-6 clear-left-padding">
                                 <div class="form-group">
-                                    <label>Residance Phone</label>
+                                    <label>Residence Phone</label>
                                     <input type="text" class="form-control" data-ng-model="entity.PdResidenceMobile" />
 
                                 </div>
