--- a/src/app/pages/employee/empprofile/empprofile.html
+++ b/src/app/pages/employee/empprofile/empprofile.html
@@ -41,7 +41,7 @@
                     </div>
                     <div class="row">
                         <div class="col-md-6">
-                            <label>Nationality</label>
+                            <label>Religion</label>
                             <p>{{empBasicDetail.RMName}}</p>
                         </div>
 
