--- a/src/app/pages/employee/empdocuments/empdocuments.html
+++ b/src/app/pages/employee/empdocuments/empdocuments.html
@@ -1,1 +1,42 @@
-<h1>document</h1>
+<div class="col-lg-12 top-margin ">
+    <div class="row">
+        <div class="col-sm-12 new-person-details">
+            <div class="col-lg-2  bhoechie-tab-menu clear-left-padding">
+                <div class="list-group">
+                    <a href ui-sref-active="active" ui-sref="employee.documents.myfile" class="list-group-item  text-center">
+                        <h4>
+                            <i class="fa fa-file"></i>
+                        </h4>
+                        <br/>My File
+                    </a>
+                    <a href ui-sref-active="active" ui-sref="employee.documents.shared" class="list-group-item text-center">
+                        <h4 class="fa fa-share-square"></h4>
+                        <br/>Shared
+                    </a>
+                    <a href ui-sref-active="active" ui-sref="employee.summary" class="list-group-item text-center">
+                        <h4 class="glyphicon glyphicon-home"></h4>
+                        <br/>Public
+                    </a>
+                    <a href ui-sref-active="active" ui-sref="employee.summary" class="list-group-item text-center">
+                        <h4 class="glyphicon glyphicon-cutlery"></h4>
+                        <br/>Other
+                    </a>
+                </div>
+            </div>
+            <div class="col-lg-10">
+                <div class="panel">
+                    <div class="panel-body">
+                        <div ui-view></div>
+                    </div>
+                </div>
+            </div>
+
+        </div>
+    </div>
+</div>
+
+
+<style>
+   
+</style>
+
