--- a/src/sass/theme/_empMain.scss
+++ b/src/sass/theme/_empMain.scss
@@ -240,3 +240,87 @@ margin-top: 30px;
   overflow: auto;
 }
   //end of ED css
+
+
+
+ /*  bhoechie tab */
+
+ .bhoechie-tab-container {
+  z-index: 10;
+  background-color: #ffffff;
+  padding: 0 !important;
+  border-radius: 4px;
+  -moz-border-radius: 4px;
+  border: 1px solid #ddd;
+  margin-top: 20px;
+  margin-left: 50px;
+  -webkit-box-shadow: 0 6px 12px rgba(0, 0, 0, .175);
+  box-shadow: 0 6px 12px rgba(0, 0, 0, .175);
+  -moz-box-shadow: 0 6px 12px rgba(0, 0, 0, .175);
+  background-clip: padding-box;
+  opacity: 0.97;
+  filter: alpha(opacity=97);
+}
+
+.bhoechie-tab-menu {
+  padding-right: 0;
+  padding-left: 0;
+  padding-bottom: 0;
+}
+
+.bhoechie-tab-menu .list-group {
+  margin-bottom: 0;
+}
+
+.bhoechie-tab-menu .list-group>a {
+  margin-bottom: 0;
+}
+
+.bhoechie-tab-menu .list-group>a .glyphicon,
+.bhoechie-tab-menu .list-group>a .fa {
+  color: #204d74;
+}
+
+.bhoechie-tab-menu .list-group>a:first-child {
+  border-top-right-radius: 0;
+  -moz-border-top-right-radius: 0;
+}
+
+.bhoechie-tab-menu .list-group>a:last-child {
+  border-bottom-right-radius: 0;
+  -moz-border-bottom-right-radius: 0;
+}
+
+.bhoechie-tab-menu .list-group>a.active,
+.bhoechie-tab-menu .list-group>a.active .glyphicon,
+.bhoechie-tab-menu .list-group>a.active .fa {
+  background-color: #204d74;
+  background-image: #204d74;
+  color: #ffffff;
+}
+
+.bhoechie-tab-menu .list-group>a.active:after {
+  content: '';
+  position: absolute;
+  left: 100%;
+  top: 50%;
+  margin-top: -13px;
+  border-left: 0;
+  border-bottom: 13px solid transparent;
+  border-top: 13px solid transparent;
+  border-left: 10px solid #204d74;
+}
+
+.bhoechie-tab-content {
+  background-color: #ffffff;
+  /* border: 1px solid #eeeeee; */
+  padding-left: 20px;
+  padding-top: 10px;
+  height: 275px;
+}
+
+
+
+.bhoechie-tab .bhoechie-tab-content:not(.active) {
+  display: none;
+}
