--- a/src/app/common/components/reportViewer/reportViewer.html
+++ b/src/app/common/components/reportViewer/reportViewer.html
@@ -18,6 +18,12 @@
                             <button id="reset-button" class="btn btn-xs btn-default  pull-right" data-toggle="modal" ng-click="reset();">
                                 Reset
                             </button>
+
+                            <!-- <button type="submit" class="btn btn-xs btn-default  pull-right" ng-click="getPageData();">Search</button> -->
+
+                            <button class="btn btn-xs btn-default  pull-right" type="submit" ng-click="backList()">
+                                Back
+                            </button>
                         </div>
                     </div>
 
@@ -28,7 +34,7 @@
                         position:absolute;
                         top:200px;
                         left:0px;" ng-click="page.showFilter=!page.showFilter">
-                            <i ng-class="{'ion-arrow-right-b':!page.showFilter, 'ion-arrow-left-b':page.showFilter}"></i>
+                        <i ng-class="{'ion-arrow-right-b':!page.showFilter, 'ion-arrow-left-b':page.showFilter}"></i>
                     </button>
 
 
