--- a/src/app/pages/self/statement/balance/balance.html
+++ b/src/app/pages/self/statement/balance/balance.html
@@ -4,15 +4,14 @@
             <div class="panel-heading">
                 <div class="row">
                     <div class="col-md-3">
-                        <label dotranslate>Monthly Roster Detail</label>
+                        <label dotranslate>Employee Leave Balance</label>
                     </div>
-                    <div class="col-md-6 ">
+                    <!-- <div class="col-md-6 ">
                         <label dotranslate>Search Roster by month</label>
-                    </div>
-                    <div class="col-md-3">
+                    </div> -->
+                    <!-- <div class="col-md-3">
                         <div class="row pull-right">
                             <div class="col-md-7">
-                                <!-- <select class="form-control input-sm" ng-change="employeeSalary()" ng-model="month" ng-options="monthL.Id as monthL.Name for monthL in monthlySummery.monthList"></select> -->
                                 <div class="input-group" moment-picker="fromDate" format="MMM-YYYY">
                                     <span class="input-group-addon">
                                         <i class="fa fa-calendar"></i>
@@ -25,7 +24,7 @@
                                 <button type="submit" class="btn input-sm btn-success" ng-click="getPageData();" dotranslate>Search</button>
                             </div>
                         </div>
-                    </div>
+                    </div> -->
                 </div>
             </div>
 
