--- a/src/app/common/components/reportViewer/reportViewer.html
+++ b/src/app/common/components/reportViewer/reportViewer.html
@@ -39,7 +39,7 @@
 
 
 
-                    <i id="progress-bar" class="fa fa-spinner fa-pulse fa-1x fa-fw"></i>
+                    <i ng-show="progressBar" id="progress-bar" class="fa fa-spinner fa-pulse fa-1x fa-fw"></i>
                     <iframe ng-src="{{reportUrl}}" class="iframe" scrolling="yes" frameborder="0" height="400px" width="100%" iframe-onload="iframeLoadedCallBack()"></iframe>
                 </div>
             </div>
