--- a/src/app/pages/employee/empassets/empassets.html
+++ b/src/app/pages/employee/empassets/empassets.html
@@ -1,1 +1,10 @@
-<h1>Assets</h1>
+<div class="col-md-12 top-margin">
+    <div class="panel">
+        <div class="panel-body">
+            <div class="row">
+                <div ui-grid="gridOptions" class="">
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
