--- a/src/app/pages/directory/directory.html
+++ b/src/app/pages/directory/directory.html
@@ -1,3 +1,3 @@
-<div ng-controller="employeesController">
+<div ng-controller="directoryController">
     <top-nav menu="'directory'"></top-nav> 
 </div>
