--- a/src/app/common/components/childNav/childNav.html
+++ b/src/app/common/components/childNav/childNav.html
@@ -6,12 +6,11 @@
             </li>
         </ul>
     </div>
-    <div class="clear-fix"></div>
-    <br/>
-    <div class="panel">
-        <div class="panel-body">
-            <div ui-view autoscroll="true" autoscroll-body-top>
-            </div>
-        </div>
+
+    <!-- <div class="panel">
+        <div class="panel-body"> -->
+    <div ui-view autoscroll="true" autoscroll-body-top>
     </div>
+    <!-- </div>
+    </div> -->
 </div>
