--- a/src/app/pages/team/reports/reports.html
+++ b/src/app/pages/team/reports/reports.html
@@ -1,8 +1,7 @@
 <div class="col-lg-12">
     <div class="panel">
         <div class="panel-body">
-            <div ui-grid="gridOptions" class="">
-            </div>
+            <h1>Reports</h1>
         </div>
     </div>
 </div>
